# Insight-Finder-Project

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: trigger-tests.yml
InsightFinderProject/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
data/: class_data_set.csv
src/: AppState.cpp  AppState.h  Cli.cpp  Cli.h  Insight.h  InsightGenerator.cpp  InsightGenerator.h  InsightStore.cpp  InsightStore.h  Person.cpp  Person.h  PersonBuilder.cpp  PersonBuilder.h  PersonCsvReader.cpp  PersonCsvReader.h  PersonJsonReader.cpp  PersonJsonReader.h  PersonReader.h  PersonRepository.cpp  PersonRepository.h  main.cpp
tests/: test_insight_generator.cpp  test_insight_store.cpp  test_person_repository.cpp
